project('test','cpp')
test('test_headers_test', executable('test_headers','test_headers.cpp',dependencies: [ subproject('boost').get_variable('headers') ] ) )
test('test_filesystem_test', executable('test_filesystem','test_filesystem.cpp',dependencies: [ subproject('boost').get_variable('filesystem') ] ) )
test('test_thread_test', executable('test_thread','test_thread.cpp',dependencies: [ subproject('boost').get_variable('thread') ] ) )
test('test_regex_test', executable('test_regex','test_regex.cpp',dependencies: [ subproject('boost').get_variable('regex') ] ) )
